Organized code, removed sql file

--- a/texas-dec-2022-2m.ipynb
+++ b/texas-dec-2022-2m.ipynb
@@ -2,21 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "cd85d5b4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import cfgrib\n",
-    "#import eccodes\n",
     "import cdsapi\n",
-    "import xarray as xr"
+    "import xarray as xr\n",
+    "import os\n",
+    "import psycopg2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "817c0f4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Year and month parameters\n",
+    "year = '2022'\n",
+    "month = '12'"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ad05e1c1",
+   "id": "456e97e2",
    "metadata": {},
    "source": [
     "## Use CDS API to download 2m data for December 2022"
@@ -24,28 +37,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "7ac5b9f4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-21 20:55:12,201 INFO Welcome to the CDS\n",
-      "2023-02-21 20:55:12,204 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-single-levels\n",
-      "2023-02-21 20:55:12,393 INFO Request is completed\n",
-      "2023-02-21 20:55:12,396 INFO Downloading https://download-0012-clone.copernicus-climate.eu/cache-compute-0012/cache/data0/adaptor.mars.internal-1677024312.4241176-3742-7-53f57dd0-2cd8-47f8-9db7-3f0d122812c2.grib to download.grib (3.3M)\n",
-      "2023-02-21 20:55:13,753 INFO Download rate 2.4M/s                                                                                                                   \n"
+      "2023-02-22 14:10:19,323 INFO Welcome to the CDS\n",
+      "2023-02-22 14:10:19,324 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-single-levels\n",
+      "2023-02-22 14:10:19,571 INFO Request is completed\n",
+      "2023-02-22 14:10:19,574 INFO Downloading https://download-0017.copernicus-climate.eu/cache-compute-0017/cache/data8/adaptor.mars.internal-1677082358.5509171-13367-4-87083d77-5668-4868-964f-bcf8fee85649.grib to download.grib (3.3M)\n",
+      "2023-02-22 14:10:21,720 INFO Download rate 1.5M/s                                                                                                                   \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Result(content_length=3481920,content_type=application/x-grib,location=https://download-0012-clone.copernicus-climate.eu/cache-compute-0012/cache/data0/adaptor.mars.internal-1677024312.4241176-3742-7-53f57dd0-2cd8-47f8-9db7-3f0d122812c2.grib)"
+       "Result(content_length=3481920,content_type=application/x-grib,location=https://download-0017.copernicus-climate.eu/cache-compute-0017/cache/data8/adaptor.mars.internal-1677082358.5509171-13367-4-87083d77-5668-4868-964f-bcf8fee85649.grib)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,8 +74,8 @@
     "        'product_type': 'reanalysis',\n",
     "        'format': 'grib',\n",
     "        'variable': '2m_temperature',\n",
-    "        'year': '2022',\n",
-    "        'month': '12',\n",
+    "        'year': f'{year}',\n",
+    "        'month': f'{month}',\n",
     "        'day': [\n",
     "            '01', '02', '03',\n",
     "            '04', '05', '06',\n",
@@ -91,8 +106,6 @@
     "            25.840437651866516, # south\n",
     "            -93.5175532104321, #eat\n",
     "            \n",
-    "            # w, s, e, n\n",
-    "            # -106.64719063660635,25.840437651866516,-93.5175532104321,36.50050935248352\n",
     "        ]\n",
     "    },\n",
     "    'download.grib')\n",
@@ -101,15 +114,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "d11249d9",
+   "execution_count": 4,
+   "id": "4de63045",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-21 20:55:13,760 WARNING Ignoring index file 'download.grib.923a8.idx' older than GRIB file\n"
+      "2023-02-22 14:10:21,745 WARNING Ignoring index file 'download.grib.923a8.idx' older than GRIB file\n"
      ]
     }
    ],
@@ -119,179 +132,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "5397429b",
+   "execution_count": 5,
+   "id": "bc4358e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ds['t2m']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "c1cf3482",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Create DataArray from t2m element of grib file\n",
     "t2m_da = ds['t2m']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "b54aba95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#t2m_da.sel(longitude=30.1, latitude=-101.2, time='2022-12-07T00:00', method='nearest')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "b90d7cb1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#t2m_da.sel().shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "6e7d00cc",
+   "execution_count": 6,
+   "id": "ecd97f05",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Transform data array to dataframe. Reset index (dimensions) so they appear as columns\n",
     "# Perform attribute projection\n",
     "df = t2m_da.to_dataframe().reset_index()[[\"time\", \"latitude\", \"longitude\", \"t2m\"]]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "db668cde",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>t2m</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-12-01</td>\n",
-       "      <td>36.341</td>\n",
-       "      <td>-106.648000</td>\n",
-       "      <td>1.724756</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-12-01</td>\n",
-       "      <td>36.341</td>\n",
-       "      <td>-106.397981</td>\n",
-       "      <td>0.697900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-12-01</td>\n",
-       "      <td>36.341</td>\n",
-       "      <td>-106.147962</td>\n",
-       "      <td>2.356592</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022-12-01</td>\n",
-       "      <td>36.341</td>\n",
-       "      <td>-105.897942</td>\n",
-       "      <td>2.508447</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-12-01</td>\n",
-       "      <td>36.341</td>\n",
-       "      <td>-105.647923</td>\n",
-       "      <td>0.718408</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        time  latitude   longitude       t2m\n",
-       "0 2022-12-01    36.341 -106.648000  1.724756\n",
-       "1 2022-12-01    36.341 -106.397981  0.697900\n",
-       "2 2022-12-01    36.341 -106.147962  2.356592\n",
-       "3 2022-12-01    36.341 -105.897942  2.508447\n",
-       "4 2022-12-01    36.341 -105.647923  0.718408"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Transform t2m from Kelvin to Celsius\n",
     "\n",
+    "# Convert t2m from Kelvin to Celsius\n",
     "df[\"t2m\"]=df[\"t2m\"].apply(lambda x:x - 273.15)\n",
     "\n",
     "# Export to CSV\n",
-    "df.to_csv(\"t2m-texas-dec-2022.csv\", index=False)\n",
-    "\n",
-    "df.head()"
+    "df.to_csv('t2m-texas.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f53dee6a",
+   "metadata": {},
+   "source": [
+    "### Load to PostgreSQL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "1a79add6",
+   "execution_count": 7,
+   "id": "1dcf6486",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Allow sql magic\n",
     "%load_ext sql\n",
     "from sqlalchemy import create_engine"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "4f3c8091",
+   "execution_count": 8,
+   "id": "96b27375",
    "metadata": {},
    "outputs": [
     {
@@ -300,21 +191,55 @@
        "'Connected: developer@copernicus'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Format\n",
-    "%sql postgresql://developer:camus@localhost:5432/copernicus\n",
-    "                        "
+    "# Connect to Postgresql\n",
+    "key='POSTGRESQL_PASSWORD'\n",
+    "pwd = os.getenv(key)\n",
+    "\n",
+    "postgresql_conn = f\"postgresql://developer:{pwd}@localhost:5432/copernicus\"\n",
+    "\n",
+    "%sql $postgresql_conn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "befc7c2c",
+   "metadata": {},
+   "source": [
+    "## Delete data to allow reloads"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "e3fe82ae",
+   "execution_count": 10,
+   "id": "dd9c3864",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Establish psycopg2 connection\n",
+    "ps_connection = psycopg2.connect(user=\"developer\",\n",
+    "                                     password=pwd,\n",
+    "                                     host=\"localhost\",\n",
+    "                                     port=\"5432\",\n",
+    "                                     database=\"copernicus\")\n",
+    "\n",
+    "cursor = ps_connection.cursor()\n",
+    "\n",
+    "# Execute stored procedure to delete rows by year and month\n",
+    "cursor.execute(\"CALL delete_monthly_t2m(%s, %s);\", (year, month))\n",
+    "\n",
+    "ps_connection.commit();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a4d307b0",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +247,6 @@
      "output_type": "stream",
      "text": [
       " * postgresql://developer:***@localhost:5432/copernicus\n",
-      "Done.\n",
       "1695576 rows affected.\n"
      ]
     },
@@ -332,7 +256,7 @@
        "[]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,18 +264,24 @@
    "source": [
     "%%sql\n",
     "\n",
-    "truncate table txdec2022;\n",
-    "\n",
-    "COPY txdec2022(datetime, latitude, longitude, t2m)\n",
-    "FROM '/home/ef/Documents/sunairio/t2m-texas-dec-2022.csv'\n",
+    "COPY texas_t2m(datetime, latitude, longitude, t2m)\n",
+    "FROM '/home/ef/Documents/sunairio/t2m-texas.csv'\n",
     "DELIMITER ','\n",
     "CSV HEADER;"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "08e1f98d",
+   "metadata": {},
+   "source": [
+    "### Sanity check"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "d3f90dbb",
+   "execution_count": 13,
+   "id": "24727c5e",
    "metadata": {},
    "outputs": [
     {
@@ -376,47 +306,47 @@
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>2022-12-01 12:00:00</td>\n",
-       "            <td>36.341</td>\n",
-       "            <td>-106.648</td>\n",
-       "            <td>-5.342626953124977</td>\n",
+       "            <td>2022-12-01 00:00:00</td>\n",
+       "            <td>36.341000000000000</td>\n",
+       "            <td>-104.897865384615410</td>\n",
+       "            <td>1.661279296875023</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2022-12-01 12:00:00</td>\n",
-       "            <td>36.341</td>\n",
-       "            <td>-106.39798076923077</td>\n",
-       "            <td>-5.657080078124977</td>\n",
+       "            <td>2022-12-01 00:00:00</td>\n",
+       "            <td>36.341000000000000</td>\n",
+       "            <td>-104.647846153846190</td>\n",
+       "            <td>2.071923828125023</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2022-12-01 12:00:00</td>\n",
-       "            <td>36.341</td>\n",
-       "            <td>-106.14796153846154</td>\n",
-       "            <td>-4.735693359374977</td>\n",
+       "            <td>2022-12-01 00:00:00</td>\n",
+       "            <td>36.341000000000000</td>\n",
+       "            <td>-104.397826923076960</td>\n",
+       "            <td>1.860498046875023</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2022-12-01 12:00:00</td>\n",
-       "            <td>36.341</td>\n",
-       "            <td>-105.89794230769232</td>\n",
-       "            <td>-3.9739746093749773</td>\n",
+       "            <td>2022-12-01 00:00:00</td>\n",
+       "            <td>36.341000000000000</td>\n",
+       "            <td>-104.147807692307740</td>\n",
+       "            <td>1.463037109375023</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2022-12-01 12:00:00</td>\n",
-       "            <td>36.341</td>\n",
-       "            <td>-105.64792307692309</td>\n",
-       "            <td>-4.474462890624977</td>\n",
+       "            <td>2022-12-01 00:00:00</td>\n",
+       "            <td>36.341000000000000</td>\n",
+       "            <td>-103.897788461538510</td>\n",
+       "            <td>1.364404296875023</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(datetime.datetime(2022, 12, 1, 12, 0), 36.341, -106.648, -5.342626953124977),\n",
-       " (datetime.datetime(2022, 12, 1, 12, 0), 36.341, -106.39798076923077, -5.657080078124977),\n",
-       " (datetime.datetime(2022, 12, 1, 12, 0), 36.341, -106.14796153846154, -4.735693359374977),\n",
-       " (datetime.datetime(2022, 12, 1, 12, 0), 36.341, -105.89794230769232, -3.9739746093749773),\n",
-       " (datetime.datetime(2022, 12, 1, 12, 0), 36.341, -105.64792307692309, -4.474462890624977)]"
+       "[(datetime.datetime(2022, 12, 1, 0, 0), Decimal('36.341000000000000'), Decimal('-104.897865384615410'), Decimal('1.661279296875023')),\n",
+       " (datetime.datetime(2022, 12, 1, 0, 0), Decimal('36.341000000000000'), Decimal('-104.647846153846190'), Decimal('2.071923828125023')),\n",
+       " (datetime.datetime(2022, 12, 1, 0, 0), Decimal('36.341000000000000'), Decimal('-104.397826923076960'), Decimal('1.860498046875023')),\n",
+       " (datetime.datetime(2022, 12, 1, 0, 0), Decimal('36.341000000000000'), Decimal('-104.147807692307740'), Decimal('1.463037109375023')),\n",
+       " (datetime.datetime(2022, 12, 1, 0, 0), Decimal('36.341000000000000'), Decimal('-103.897788461538510'), Decimal('1.364404296875023'))]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,15 +355,14 @@
     "%%sql\n",
     "\n",
     "SELECT *\n",
-    "FROM txdec2022\n",
-    "WHERE datetime = '2022-12-01 12:00:00'\n",
+    "FROM texas_t2m\n",
     "LIMIT 5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8caf85a6",
+   "id": "527c2b2c",
    "metadata": {},
    "outputs": [],
    "source": []
